# ts4bet

./: README.md  main.py  pyproject.toml  requirements.txt
javascript/: coinflip.js  dice.js  functions.js  main.js  mines.js  towers.js
templates/: coinflip.html  dice.html  home.html  login.html  main.html  mines.html  register.html  registerlogin.html  sidepanel.html  towers.html
