[project]
name = "vercel-fastapi-starter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.121.0",
  "uvicorn>=0.34.0",
  "upstash-redis==1.5.0",
  "python-multipart",
  "psycopg[binary]",
  "jinja2>=3.1.2",
  "bcrypt>=4.0.0",
  "requests>=2.31.0",
  "pymongo==4.7.2",
  "slowapi"
]
